--- a/style/style.css
+++ b/style/style.css
@@ -61,9 +61,10 @@ button:hover{
 }
 .column{
     flex-direction: column;
+    gap: 0.8em;
 }
 .font-size-24{
-    font-size: 24px;
+    font-size: 20px;
 }
 
 /* / reusable stiling */
